# telos

./: .gitignore  README.md  context.md  demo_context.md  requirements.txt  test.md  test_backend.py  train.py  train_c1_llm.py  train_extended.py  train_extractor_llm.py  train_question_llm.py
agent/: .env.example  pyproject.toml
agent/config/: mcp-servers.json  orchestrator.md
agent/config/agents/: coder.md  crm.md
agent/context/codebase/src/models/: user.py
agent/docker/twenty-crm/: .env.example  docker-compose.yml
agent/prompts/: build.md
agent/telos_agent/: __init__.py  claude.py  cli.py  interview.py  mcp_config.py  orchestrator.py  ralph.py
agent/telos_agent/mcp/: __init__.py  gemini.py  reviewer.py
agent/telos_agent/mcp/gemini/: __init__.py  __main__.py  chunker.py  multimodal.py  pipeline.py  server.py  settings.py  store.py
agent/telos_agent/tools/: __init__.py  image_gen.py  seed_crm.py  send_email.py
agent/templates/: agents-md-template.md  plan-template.md  prd-template.md
agent/tests/: TEST_REPORT.md  conftest.py  gemini_benchmark.py  integration_test_workflow.py  test_cli.py  test_gemini_chunker.py  test_gemini_integration.py  test_gemini_multimodal.py  test_gemini_settings.py  test_gemini_store.py  test_integration_ralph.py  test_mcp_servers.py  test_unit_api_surface.py  test_unit_claude.py  test_unit_interview.py  test_unit_ralph.py
ali/: __init__.py  __main__.py  clustering.py  context_manager.py  conversation_loop.py  input_parser.py  main.py  qwen_extractor.py  rl_question_generator.py  sft_element_model.py
demo/: AGENTS.md  plan.md  progress.txt  verdict.json
docs/: iwd-campaign-transcript.txt  workflow.md
front/: next.config.ts  package-lock.json  package.json
gemini-context-mcp/: .env.example  README.md  agent.py  chunker.py  config.py  multimodal.py  pytest.ini  requirements.txt  server.py  store.py  tools.py
server/: pyproject.toml
server/server/: main.py  models.py
server/server/routes/: build.py  context.py  conversation.py
server/server/services/: build_runner.py  estimator.py  rag_bridge.py  repo.py  session.py
telos.egg-info/: PKG-INFO  SOURCES.txt
train/: train.py  (+9 more)
(+95 files in other folders)
