[project]
name = "telos-agent"
version = "0.1.0"
description = "Multi-agent orchestration system with interview-driven PRD generation and Ralph loop execution"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telos_agent"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that invoke real Claude CLI (slow, costs API credits)",
]

[project.scripts]
telos-agent = "telos_agent.cli:main"
