[project]
name = "telos-server"
version = "0.1.0"
description = "FastAPI server bridging the Telos frontend, Ali conversation loop, and agent backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[project.scripts]
telos-server = "server.main:cli"
